--- a/client/css/searchPage.css
+++ b/client/css/searchPage.css
@@ -1,9 +1,19 @@
-#main-section {
+main {
+  width: 100vw;
+}
+
+main #main-section {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-#main-section #main-title {
+@media screen and (max-width: 768px) {
+  main #main-section {
+    padding: 0 30px;
+  }
+}
+
+main #main-section #main-title {
   text-align: center;
   font-weight: 400;
   font-size: 24px;
@@ -11,12 +21,25 @@
   margin-top: 48px;
 }
 
-#main-section #search-form {
-  position: relative;
-  margin-bottom: 130px;
+@media screen and (max-width: 768px) {
+  main #main-section #main-title {
+    font-size: 22px;
+  }
 }
 
-#main-section #search-form #search-label {
+main #main-section #search-form {
+  position: relative;
+  margin-bottom: 130px;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  main #main-section #search-form {
+    margin-bottom: 60px;
+  }
+}
+
+main #main-section #search-form #search-label {
   display: block;
   width: 580px;
   height: 54px;
@@ -31,49 +54,55 @@
           box-shadow: 0 2px 4px 0 rgba(42, 42, 42, 0.12);
 }
 
-#main-section #search-form #search-label #search-input {
+@media screen and (max-width: 768px) {
+  main #main-section #search-form #search-label {
+    width: 100%;
+  }
+}
+
+main #main-section #search-form #search-label #search-input {
   width: 100%;
   font-size: 16px;
   color: #5f5f7f;
 }
 
-#main-section #search-form #search-label #search-input::-webkit-input-placeholder {
+main #main-section #search-form #search-label #search-input::-webkit-input-placeholder {
   font-size: 16px;
   color: #9fcabc;
 }
 
-#main-section #search-form #search-label #search-input:-ms-input-placeholder {
+main #main-section #search-form #search-label #search-input:-ms-input-placeholder {
   font-size: 16px;
   color: #9fcabc;
 }
 
-#main-section #search-form #search-label #search-input::-ms-input-placeholder {
+main #main-section #search-form #search-label #search-input::-ms-input-placeholder {
   font-size: 16px;
   color: #9fcabc;
 }
 
-#main-section #search-form #search-label #search-input::placeholder {
+main #main-section #search-form #search-label #search-input::placeholder {
   font-size: 16px;
   color: #9fcabc;
 }
 
-#main-section #search-form #search-label #search-input:focus::-webkit-input-placeholder {
+main #main-section #search-form #search-label #search-input:focus::-webkit-input-placeholder {
   color: lightgray;
 }
 
-#main-section #search-form #search-label #search-input:focus:-ms-input-placeholder {
+main #main-section #search-form #search-label #search-input:focus:-ms-input-placeholder {
   color: lightgray;
 }
 
-#main-section #search-form #search-label #search-input:focus::-ms-input-placeholder {
+main #main-section #search-form #search-label #search-input:focus::-ms-input-placeholder {
   color: lightgray;
 }
 
-#main-section #search-form #search-label #search-input:focus::placeholder {
+main #main-section #search-form #search-label #search-input:focus::placeholder {
   color: lightgray;
 }
 
-#main-section #search-form #search-list-section {
+main #main-section #search-form #search-list-section {
   position: absolute;
   left: 50%;
   top: 54px;
@@ -84,55 +113,68 @@
   z-index: 10;
 }
 
-#main-section #search-form #search-list-section #search-list {
+@media screen and (max-width: 768px) {
+  main #main-section #search-form #search-list-section {
+    width: 100%;
+  }
+}
+
+main #main-section #search-form #search-list-section #search-list {
   width: 580px;
   margin: 0 auto;
   background-color: white;
 }
 
-#main-section #search-form #search-list-section #search-list li {
+@media screen and (max-width: 768px) {
+  main #main-section #search-form #search-list-section #search-list {
+    width: 100%;
+  }
+}
+
+main #main-section #search-form #search-list-section #search-list li {
   font-size: 14px;
 }
 
-#main-section #search-form #search-list-section #search-list li a {
+main #main-section #search-form #search-list-section #search-list li a {
   display: inline-block;
   width: 100%;
   padding: 8px 20px;
   border-bottom: 1px solid lightgray;
 }
 
-#main-section #search-form #search-list-section #search-list li a:hover {
+main #main-section #search-form #search-list-section #search-list li a:hover {
   background-color: #f6f6f6;
 }
 
-#main-section #course-list-section {
+main #main-section #course-list-section {
   z-index: 1;
 }
 
-#main-section #course-list-section #course-list {
+main #main-section #course-list-section #course-list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(220px, auto))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(220px, auto));
+  grid-gap: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-#main-section #course-list-section #course-list li {
-  max-width: 220px;
-  height: 330px;
+main #main-section #course-list-section #course-list li {
+  width: 100%;
+  min-height: 330px;
   margin-bottom: 10px;
 }
 
-#main-section #course-list-section #course-list li a {
+main #main-section #course-list-section #course-list li a {
   display: inline-block;
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-#main-section #course-list-section #course-list li a:hover:after {
+main #main-section #course-list-section #course-list li a:hover:after {
   position: absolute;
   content: "";
   left: 0;
@@ -142,12 +184,12 @@
   background: rgba(0, 0, 0, 0.514);
 }
 
-#main-section #course-list-section #course-list li a img {
+main #main-section #course-list-section #course-list li a img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-#main-section #course-list-section #course-list li a .course-title {
+main #main-section #course-list-section #course-list li a .course-title {
   font-size: 16px;
   font-weight: bold;
   color: #454545;
@@ -159,14 +201,14 @@
   text-overflow: ellipsis;
 }
 
-#main-section #course-list-section #course-list li a .course-name {
+main #main-section #course-list-section #course-list li a .course-name {
   font-size: 14px;
   font-weight: bold;
   color: #7d7d7d;
   margin-bottom: 5px;
 }
 
-#main-section #course-list-section #course-list li a .course-price {
+main #main-section #course-list-section #course-list li a .course-price {
   font-size: 17px;
   font-weight: bold;
   color: #1e61c0;
